--- a/restaurant-landing-page/src/Components/Navbar.css
+++ b/restaurant-landing-page/src/Components/Navbar.css
@@ -6,6 +6,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   padding: 10px 20px;
+  margin-bottom: 0px;
 }
 
 /* Navigation list */
